--- a/dionysus-client/yo/app/index.html
+++ b/dionysus-client/yo/app/index.html
@@ -26,15 +26,15 @@
 <footer id="footer"></footer>
 
 <script type="text/html" id="header-template">
-<h1>This is header</h1>
+This is header
 </script>
 
 <script type="text/html" id="main-template">
-<h1>This is the main region</h1>
+This is the main region
 </script>
 
 <script type="text/html" id="footer-template">
-<h1>This is footer</h1>
+This is footer
 </script>
 
 
@@ -56,7 +56,11 @@
 <!-- endbuild -->
 
 <!-- build:js({app,.tmp}) scripts/app.js -->
+<script src="scripts/app.js"></script>
 <script src="scripts/main.js"></script>
+<script src="scripts/header.js"></script>
+<script src="scripts/footer.js"></script>
+<script src="scripts/boot.js"></script>
 <!-- endbuild -->
 </body>
 </html>
