--- a/dionysus-client/yo/app/index.html
+++ b/dionysus-client/yo/app/index.html
@@ -21,20 +21,80 @@
 
 </head>
 <body>
-<header id="header"></header>
-<main id="main"></main>
-<footer id="footer"></footer>
+<header></header>
+<main></main>
+<footer class="page-footer orange"></footer>
 
 <script type="text/html" id="header-template">
-This is header
+<nav class="orange">
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo">Dionysus</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="#">Articles</a></li>
+      <li><a href="#">Questions</a></li>
+    </ul>
+  </div>
+</nav>
 </script>
 
 <script type="text/html" id="main-template">
-This is the main region
+<div class="row">
+  <div class="col s12 m3">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">Card Title</span>
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href='#'>This is a link</a>
+      </div>
+    </div>
+  </div>
+  <div class="col s12 m3">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/sample-1.jpg">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href='#'>This is a link</a>
+      </div>
+    </div>
+  </div>
+</div>
 </script>
 
 <script type="text/html" id="footer-template">
-This is footer
+<div class="container">
+  <div class="row">
+    <div class="col l6 s12">
+      <h5 class="white-text">Footer Content</h5>
+      <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+    </div>
+    <div class="col l4 offset-l2 s12">
+      <h5 class="white-text">Links</h5>
+      <ul>
+        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="footer-copyright">
+  <div class="container">
+  &copy; 2015 XXXX Company
+  <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+  </div>
+</div>
 </script>
 
 
