--- a/dionysus-client/yo/app/index.html
+++ b/dionysus-client/yo/app/index.html
@@ -111,11 +111,11 @@
 <!-- endbuild -->
 
 <!-- build:js({app,.tmp}) scripts/app.js -->
-<script src="scripts/app.js"></script>
+<script src="scripts/root.js"></script>
 <script src="scripts/main.js"></script>
 <script src="scripts/header.js"></script>
 <script src="scripts/footer.js"></script>
-<script src="scripts/boot.js"></script>
+<script src="scripts/app.js"></script>
 <!-- endbuild -->
 </body>
 </html>
