add backbone.relational library

--- a/dionysus-client/yo/app/index.html
+++ b/dionysus-client/yo/app/index.html
@@ -28,7 +28,7 @@
 <script type="text/html" id="header-template">
 <nav class="orange">
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Dionysus</a>
+    <a href="#" class="brand-logo">DIONYSUS</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="#">Articles</a></li>
       <li><a href="#">Questions</a></li>
@@ -81,10 +81,10 @@
     <div class="col l4 offset-l2 s12">
       <h5 class="white-text">Links</h5>
       <ul>
-        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+        <li><a class="grey-text text-lighten-3" href="#">Link 1</a></li>
+        <li><a class="grey-text text-lighten-3" href="#">Link 2</a></li>
+        <li><a class="grey-text text-lighten-3" href="#">Link 3</a></li>
+        <li><a class="grey-text text-lighten-3" href="#">Link 4</a></li>
       </ul>
     </div>
   </div>
@@ -92,7 +92,7 @@
 <div class="footer-copyright">
   <div class="container">
   &copy; 2015 XXXX Company
-  <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+  <a class="grey-text text-lighten-4 right" href="#">More Links</a>
   </div>
 </div>
 </script>
@@ -103,6 +103,7 @@
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/backbone/backbone.js"></script>
+<script src="bower_components/backbone.relational/backbone-relational.js"></script>
 <script src="bower_components/backbone.babysitter/lib/backbone.babysitter.js"></script>
 <script src="bower_components/backbone.wreqr/lib/backbone.wreqr.js"></script>
 <script src="bower_components/marionette/lib/core/backbone.marionette.js"></script>
