--- a/dionysus-client/yo/app/index.html
+++ b/dionysus-client/yo/app/index.html
@@ -47,9 +47,15 @@
   <div class="col s12 m3">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
-        <span class="card-title">Card Title</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
+        <div>
+          <button id="connect" onclick="connect();">Connect</button>
+          <button id="disconnect" disabled="disabled" onclick="disconnect();">Disconnect</button>
+        </div>
+        <div id="conversationDiv">
+          <label>What is your name?</label><input type="text" id="name" />
+          <button id="sendName" onclick="sendName();">Send</button>
+          <p id="response"></p>
+        </div>
       </div>
       <div class="card-action">
         <a href="#">This is a link</a>
@@ -112,7 +118,8 @@
 <script src="bower_components/backbone.wreqr/lib/backbone.wreqr.js"></script>
 <script src="bower_components/marionette/lib/core/backbone.marionette.js"></script>
 <script src="bower_components/materialize/bin/materialize.js"></script>
-<script src="bower_components/backbone.relational/backbone-relational.js"></script>
+<script src="bower_components/sockjs/sockjs.js"></script>
+<script src="bower_components/stomp-websocket/lib/stomp.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -124,6 +131,9 @@
 <script src="scripts/articles/article.js"></script>
 <script src="scripts/articles/category.js"></script>
 <script src="scripts/app.js"></script>
+
+<script src="scripts/teststomp.js"></script>
 <!-- endbuild -->
+
 </body>
 </html>
