--- a/dionysus-client/yo/app/index.html
+++ b/dionysus-client/yo/app/index.html
@@ -44,38 +44,18 @@
 
 <script type="text/html" id="main-template">
 <div class="row">
-  <div class="col s12 m3">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <div>
-          <button id="connect" onclick="connect();">Connect</button>
-          <button id="disconnect" disabled="disabled" onclick="disconnect();">Disconnect</button>
-        </div>
-        <div id="conversationDiv">
-          <label>What is your name?</label><input type="text" id="name" />
-          <button id="sendName" onclick="sendName();">Send</button>
-          <p id="response"></p>
-        </div>
-      </div>
-      <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href='#'>This is a link</a>
-      </div>
+  <div class="container">
+    <div>
+      <a class="waves-effect waves-light btn" id="connect">Enter Chat Room</a>
+      <a class="waves-effect waves-light btn disabled" id="disconnect">Leave Chat Room</a>
     </div>
-  </div>
-  <div class="col s12 m3">
-    <div class="card">
-      <div class="card-image">
-        <img src="images/sample-1.jpg">
-        <span class="card-title">Card Title</span>
-      </div>
-      <div class="card-content">
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href='#'>This is a link</a>
+
+    <div>
+      <div class="input-field">
+        <input type="text" id="message" class="disabled">
+        <label for="message">enter messages here</label>
+        <ul class="collection" id="messages">
+        </ul>
       </div>
     </div>
   </div>
@@ -83,23 +63,6 @@
 </script>
 
 <script type="text/html" id="footer-template">
-<div class="container">
-  <div class="row">
-    <div class="col l6 s12">
-      <h5 class="white-text">Footer Content</h5>
-      <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-    </div>
-    <div class="col l4 offset-l2 s12">
-      <h5 class="white-text">Links</h5>
-      <ul>
-        <li><a class="grey-text text-lighten-3" href="#">Link 1</a></li>
-        <li><a class="grey-text text-lighten-3" href="#">Link 2</a></li>
-        <li><a class="grey-text text-lighten-3" href="#">Link 3</a></li>
-        <li><a class="grey-text text-lighten-3" href="#">Link 4</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
 <div class="footer-copyright">
   <div class="container">
   &copy; 2015 XXXX Company
@@ -132,7 +95,7 @@
 <script src="scripts/articles/category.js"></script>
 <script src="scripts/app.js"></script>
 
-<script src="scripts/teststomp.js"></script>
+<script src="scripts/chat.js"></script>
 <!-- endbuild -->
 
 </body>
