add actuator support

--- a/dionysus-client/yo/app/index.html
+++ b/dionysus-client/yo/app/index.html
@@ -55,6 +55,7 @@
         <input type="text" id="message" class="disabled">
         <label for="message">enter messages here</label>
         <ul class="collection" id="messages">
+          <li class="collection-header"><h4>Conversation</h4></li>
         </ul>
       </div>
     </div>
