static course list page

--- a/dionysus-client/yo/app/static/course-list.html
+++ b/dionysus-client/yo/app/static/course-list.html
@@ -174,7 +174,7 @@
         <div class="ui segment"><a class="ui purple right ribbon label">热门标签</a>
           <div class="ui divider"></div>
           <div class="part1"><a style="margin-right:10;" class="ui purple label">爱情</a><a style="margin-right:10;" class="ui green label">心灵</a><a style="margin-right:10;" class="ui blue label">情绪管理</a></div>
-          <div style="margin-top:10;" class="part2"><a style="margin-right:10;" class="ui black label">发泄</a><a class="ui teal label">悄悄话</a></div>
+          <div style="margin-top:10;" class="part2"><a style="margin-right:10;" class="ui black label">发泄</a><a style="margin-right:10;" class="ui teal label">悄悄话</a><a class="ui orange label">专业</a></div>
         </div>
       </div>
     </div>
