static course detail page

--- a/dionysus-client/yo/app/static/course-detail.html
+++ b/dionysus-client/yo/app/static/course-detail.html
@@ -50,6 +50,8 @@
           </div>
           <div class="ui divider"></div>
           <h3><a>授课时间与地点</a></h3>
+          <div class="ui divider"></div>
+          <div class="big ui purple button">注册</div>
         </div>
       </div>
       <div class="four wide column">
