course registration page

--- a/dionysus-client/yo/app/static/course-registration.html
+++ b/dionysus-client/yo/app/static/course-registration.html
@@ -15,14 +15,16 @@
     </div>
     <div style="margin-top:60;" class="ui two column centered grid">
       <div class="twelve wide column">
-        <form class="ui form segment">
+        <form style="padding-top:50;padding-bottom:30;" class="ui form segment">
           <h3><a>请填写您的真实信息</a></h3>
-          <div class="ui divider"></div>
+          <div style="margin-top:20;" class="ui divider"></div>
           <div class="two fields">
             <div class="field">
               <label>姓名</label>
               <input type="text" name="name" placeholder=""/>
             </div>
+          </div>
+          <div style="margin-top:20" class="two fields">
             <div class="field">
               <label>性别</label>
               <div class="ui selection dropdown">
@@ -35,6 +37,15 @@
               </div>
             </div>
           </div>
+          <div style="margin-top:20;margin-bottom:20;" class="two fields">
+            <div class="field">
+              <label>电子邮件</label>
+              <div class="ui left icon input">
+                <input type="text"/><i class="mail icon"></i>
+              </div>
+            </div>
+          </div>
+          <div style="margin-top:30;" class="ui submit purple button">注册课程</div>
         </form>
       </div>
       <div class="four wide column">
