course registration page

--- a/dionysus-client/yo/app/static/course-registration.html
+++ b/dionysus-client/yo/app/static/course-registration.html
@@ -15,7 +15,7 @@
     </div>
     <div style="margin-top:60;" class="ui two column centered grid">
       <div class="twelve wide column">
-        <form style="padding-top:50;padding-bottom:30;" class="ui form segment">
+        <form style="padding-left:30;padding-right:30;padding-top:50;padding-bottom:30;" class="ui form segment">
           <h3><a>请填写您的真实信息</a></h3>
           <div style="margin-top:20;" class="ui divider"></div>
           <div class="two fields">
@@ -45,19 +45,16 @@
               </div>
             </div>
           </div>
-          <div style="margin-top:30;" class="ui submit purple button">注册课程</div>
+          <div style="margin-top:20;margin-bottom:20;" class="two fields">
+            <div class="field">
+              <label>联系电话</label>
+              <div class="ui left icon input">
+                <input type="text"/><i class="call icon"></i>
+              </div>
+            </div>
+          </div>
+          <div style="margin-top:30;" class="ui submit purple button">提交</div>
         </form>
-      </div>
-      <div class="four wide column">
-        <div class="ui segment"><a class="ui purple right ribbon label">课程内容</a>
-          <div class="ui divider"></div>
-          <div class="ui link list"><a style="text-align:center;margin-bottom:5;font-size:1.4em;" class="active item">职场发展</a><a style="text-align:center;margin-bottom:5;font-size:1.1em;" class="item">两性心理</a><a style="text-align:center;margin-bottom:5;font-size:1.1em;" class="item">亲子活动</a><a style="text-align:center;margin-bottom:5;font-size:1.1em;" class="item">情绪管理</a><a style="text-align:center" class="item">心理百科</a></div>
-        </div>
-        <div class="ui segment"><a class="ui purple right ribbon label">热门标签</a>
-          <div class="ui divider"></div>
-          <div class="part1"><a style="margin-right:10;" class="ui purple label">爱情</a><a style="margin-right:10;" class="ui green label">心灵</a><a style="margin-right:10;" class="ui blue label">情绪管理</a></div>
-          <div style="margin-top:10;" class="part2"><a style="margin-right:10;" class="ui black label">发泄</a><a style="margin-right:10;" class="ui teal label">悄悄话</a><a class="ui orange label">专业</a></div>
-        </div>
       </div>
     </div>
   </body>
