static course page

--- a/dionysus-client/yo/app/static/course-registration.html
+++ b/dionysus-client/yo/app/static/course-registration.html
@@ -20,13 +20,25 @@
           <div style="margin-top:20;" class="ui divider"></div>
           <div class="two fields">
             <div class="field">
-              <label>姓名</label>
+              <h4>
+                <label>课程</label>
+              </h4>
+              <input type="text" name="name" disabled="disabled" value="如何有效的管理个人情绪?"/>
+            </div>
+          </div>
+          <div style="margin-top:20" class="two fields">
+            <div class="field">
+              <h4>
+                <label>姓名</label>
+              </h4>
               <input type="text" name="name" placeholder=""/>
             </div>
           </div>
           <div style="margin-top:20" class="two fields">
             <div class="field">
-              <label>性别</label>
+              <h4>
+                <label>性别</label>
+              </h4>
               <div class="ui selection dropdown">
                 <input type="hidden" name="gender"/>
                 <div class="default text">性别</div><i class="dropdown icon"></i>
@@ -39,7 +51,9 @@
           </div>
           <div style="margin-top:20;margin-bottom:20;" class="two fields">
             <div class="field">
-              <label>电子邮件</label>
+              <h4>
+                <label>电子邮件</label>
+              </h4>
               <div class="ui left icon input">
                 <input type="text"/><i class="mail icon"></i>
               </div>
@@ -47,7 +61,9 @@
           </div>
           <div style="margin-top:20;margin-bottom:20;" class="two fields">
             <div class="field">
-              <label>联系电话</label>
+              <h4>
+                <label>联系电话</label>
+              </h4>
               <div class="ui left icon input">
                 <input type="text"/><i class="call icon"></i>
               </div>
